<resources>
    <string name="app_name">Digitalna ribarnica</string>
    <string name="welcome">Dobro došli u digitalnu ribarnicu</string>
    <string name="login">Prijava</string>
    <string name="registration">Registriraj se</string>
    <string name="registrationHeader">Registracija</string>
    <string name="urediProfil">Uredi profil</string>
    <string name="username">Email</string>
    <string name="password">Lozinka</string>
    <string name="secondpassword">Ponovljena lozinka</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Broj mobitela</string>
    <string name="forgotPassword">Zaboravljena lozinka?</string>
    <string name="facebook_app_id">345456403402437</string>
    <string name="fb_login_protocol_scheme">fb345456403402437</string>
    <string name="title_activity_register_form">RegisterActivityForm</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="fishSpecies">Vrsta ribe</string>
    <string name="location">Lokacija</string>
    <string name="pricePerKg">Cijena po kilogramu:</string>
    <string name="fishClass">Razred ribe:</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Odustani</string>
    <string name="newOffer">Nova ponuda</string>
    <string name="editImage">Promijeni sliku</string>
    <string name="saveChanges">Spremi</string>
    <string name="reserve">Rezerviraj</string>
    <string name="offerDetails">Detalji ponude</string>
    <string name="offers">Ponude</string>
    <string name="picture">Slika</string>
    <string name="offer_title">Naslov ponude</string>
    <string name="filter">Filtriranje</string>
    <string name="sort">Sortiraj:</string>
    <string name="small">Male</string>
    <string name="medium">Srednje</string>
    <string name="large">Velike</string>
    <string name="smallFish">Male ribe: </string>
    <string name="mediumFish">Srednje ribe: </string>
    <string name="largeFish">Velike ribe: </string>
    <string name="search">Pretraži</string>
    <string name="onboardingHelp">Pomoć</string>
    <string name="Odjava">ODJAVA</string>
    <string name="ucitaj_sliku">Učitaj sliku</string>
    <string name="smallDescription">1 mala riba = 0,1 do 0,19 kg </string>
    <string name="mediumDescription">1 srednja riba = 0,2 do 0,49 kg</string>
    <string name="largeDescription">1 velika riba = 0,5 kg i više</string>
    <string name="Odustani">Odustani</string>
    <string name="reservation_title">Rezervacije</string>
    <string name="myReservations">Aktivne rezervacije</string>
    <string name="requests">Zahtjevi</string>
    <string name="acceptedRequests">Potvrđeno</string>
    <string name="reservationRecyclerView">Naziv rezervacije</string>
    <string name="reservationLocation">Lokacija</string>
    <string name="gradeReservation">Ocjena</string>
    <string name="nameSurname">Ime prezime</string>
    <string name="badge">Značka</string>
    <string name="registerHere">Registriraj se!</string>
    <string name="noAccount">Nemaš račun?</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="least_expensive">Najjeftinije</string>
    <string name="most_expensive">Najskuplje</string>
    <string name="kg">kg</string>
    <string name="kn">kn</string>
    <string name="knperkg">kn/kg</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="pricePlaceholder">25,00 kn/kg</string>
    <string name="available">Dostupno:</string>
    <string name="quantityNull">0 kg</string>
    <string name="chooseQuantity">Odaberite količinu:</string>
    <string name="contact">Kontaktiraj</string>
    <string name="chooseFish">Odaberi vrstu</string>
    <string name="chooseLocation">Odaberi lokaciju</string>
    <string name="_99">99</string>
    <string name="accountExists">Imaš račun?</string>
    <string name="signinhere">Prijavi se!</string>
    <string name="forgotPass">Zaboravljena lozinka?</string>
    <string name="resetPassTxt">Unesite email kako bi zaprimili poveznicu za promjenu lozinke.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="sendEmail">Pošalji</string>
    <string name="date">Datum</string>
    <string name="dateReservation">Datum i vrijeme rezervacije:</string>
    <string name="my_offers">Moje ponude</string>
    <string name="filter_menu">Filtriranje</string>
    <string name="all_offers">Sve ponude</string>
    <string name="requestRecyclerView">Naziv zahtjeva</string>
    <string name="nazad">Nazad</string>
    <string name="gradeRequest">Ocjena</string>
    <string name="mailConfirmationDetails">Potvrdite vaš račun u mail-u koji smo Vam poslali.</string>
    <string name="mailConfirmationButton">Otvori e-mail</string>
    <string name="mailConfirmation">Potvrdite e-mail</string>
    <string name="buyer">Kupac:</string>
    <string name="sorting">Sortiranje</string>
    <string name="_999">999</string>
    <string name="insertPrice">Ili unesite ručno:</string>
    <string name="lowPrice">Najniža cijena:</string>
    <string name="upperPrice">Najviša cijena:</string>
    <string name="rateUser">Ocijeni</string>
    <string name="comment">Ostavite komentar:</string>
    <string name="showRating">Prikaži ocjenjivanje</string>
    <string name="status">Status</string>
    <string name="ukupnaCijena">Ukupna cijena: </string>
    <string name="badge_title">Naziv značke</string>
    <string name="badge_description">Opis značke</string>
    <string name="newBadge">Nova značka</string>
    <string name="newBadgeText">Čestitamo! Dobili ste novu značku!</string>
    <string name="download">Preuzmi</string>
    <string name="_0_00kn">0,00 kn</string>
    <string name="ocjenaKorisnika">Ocjena korisnika:</string>
    <string name="showRatings"><u>Prikaži sve ocjene</u></string>
    <string name="rateSeller"><u>Ocijeni prodavatelja</u></string>
    <string name="reviewer">Ocjenjivač:</string>
    <string name="seller">Prodavatelj: </string>
    <string name="back">Vrati se</string>
    <string name="buy">Kupac</string>
    <string name="sell">Prodavatelj</string>
    <string name="home">Početna</string>
    <string name="chat">Poruke</string>
    <string name="profile">Profil</string>
    <string name="reservationHistory">Povijest rezervacija</string>
    <string name="continueAs">Nastavi kao</string>
    <string name="image">Slika</string>
    <string name="buyerText">Kupac</string>
    <string name="sellerText">Prodavatelj</string>
    <string name="button">Gumb</string>
    <string name="editOffer">Uredi ponudu</string>
    <string name="changeQuantity">Promijenite količinu:</string>
    <string name="currentQuantity">Trenutna količina:</string>
    <string name="HRV">HRV</string>
    <string name="ENG">ENG</string>
    <string name="language">Jezik</string>
    <string name="badgesDescription">Opis znački</string>
    <string name="userSignOut">Odjavljen</string>
    <string name="error">Error</string>
    <string name="editProfile">Uredi profil</string>
    <string name="ratings">Ocjene</string>
    <string name="exitApp">Želite izaći iz aplikacije?</string>
    <string name="pressYes">Stisnite DA ako želite</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="pressBackforExit">Stisnite NAZAD još jednom za izlaz</string>
    <string name="offerSuccessfullyCreated">Ponuda uspješno kreirana</string>
    <string name="fishDoesntExist">Unesena riba ne postoji u bazi</string>
    <string name="noData">Potrebni podaci nisu uneseni</string>
    <string name="fishClassNotSelected">Nije odabran razred ribe</string>
    <string name="quantityNotSelected">Nije odabrana količina</string>
    <string name="offerSuccessfullyUpdated">Ponuda uspješno ažurirana</string>
    <string name="enterQuantityFirst">Prvo unesite željenu količinu ribe</string>
    <string name="higestPriceHigerThanLowest">Najviša cijena mora biti veća od najniže!</string>
    <string name="userSuccessfullyRated">Korisnik uspješno ocijenjen</string>
    <string name="chooseLanguage">Odaberite jezik:</string>
    <string name="croatian">Hrvatski</string>
    <string name="english">Engleski</string>
    <string name="unavailable">Nedostupno</string>
    <string name="fishQuantityUnavailableAnymore">Unesena količina ribe više nije dostupna</string>
    <string name="currentLanguage">Trenutni jezik</string>
    <string name="reservationSuccessfullyCreated">Rezervacija uspješno izvršena</string>
    <string name="reservations">Rezervacije</string>
    <string name="deletedReservations">Obrisane rezervacije</string>
    <string name="deletedReservationsMessage">Zbog isteka vremena, obrisan je sljedeći broj Vaših rezervacija: </string>
    <string name="okay">U redu</string>
    <string name="filterOffers">Filtriranje ponuda</string>
    <string name="filterOffersOffersNotFound">Nije pronađena niti jedna ponuda na temelju zadanih karakteristika</string>
    <string name="emptyMyOffers">Trenutno nemate niti jednu kreiranu svoju ponudu</string>
    <string name="showFirst">"Prikaži prvo: "</string>
    <string name="warning">Upozorenje</string>
    <string name="transactionCompleted">Želite li potvrditi da je preuzimanje i kupnja ribe uspješno provedena?</string>
    <string name="transactionNotCompleted">Želite li potvrditi da kupnja ribe nije uspješno provedena?</string>
    <string name="wantToDeleteOffer">Želite li obrisati ponudu?</string>
    <string name="offerSuccessfullyDeleted">Ponuda uspješno obrisana</string>
    <string name="reservationsExistsCantDelete">Postoje neprovedene rezervacije vezane uz ponudu koju želite obrisati</string>
    <string name="wantToConfirmReservation">Želite li potvrditi rezervaciju?</string>
    <string name="wantToDeleteReservation">Želite li sigurno obrisati rezervaciju?</string>
    <string name="fishNotAvailable">Unesena količina ribe više nije dostupna</string>
    <string name="offerConfirmedBigText">" Vaša narudžba je potvrđena od strane ponuditelja. Kako biste dovršili kupnju ribe, odnosno dogovorili mjesto preuzimanja ribe"</string>
    <string name="offerConfirmedBigText2">" i plaćanje, kontaktirajte ponuditelja putem kontakta navedenog u nastavku maila ili putem chata naše aplikacije.\n\n\n"</string>
    <string name="sellerData">Podaci o ponuditelju: \n</string>
    <string name="phoneNumber">"\nBroj mobitela: "</string>
    <string name="address">"\nAdresa: "</string>
    <string name="messageOffer1">"Podaci o rezervaciji: \nVrsta ribe: "</string>
    <string name="messageOffer2">"\nKoličina rezervirane ribe po razredima: male ribe: "</string>
    <string name="messageOffer3">"kg , srednje ribe: "</string>
    <string name="messageOffer4">"kg , velike ribe: "</string>
    <string name="messageOffer5">"kg\nCijena po kilogramu: "</string>
    <string name="messageOffer6">"kn\nUkupna cijena: "</string>
    <string name="messageOffer7">"kn\nDatum i vrijeme rezervacije: "</string>
    <string name="messageOffer8">\n\n\nZahvaljujemo,\nDigitalna ribarnica</string>
    <string name="mailReservationConfirmed">Potvrđena rezervacija ribe</string>
    <string name="noGmail">Nemate instaliran Gmail</string>
    <string name="pleaseConfirmEmail">Molimo potvrdite email</string>
    <string name="checkSignInData">Provjerite podatke za prijavu</string>
    <string name="wrongPassword">Unijeli ste krivu lozinku</string>
    <string name="cantComputeSHA256">Nije moguće izračunati SHA256</string>
    <string name="userBlocked">Korisnik je blokiran</string>
    <string name="userNotFound">Korisnik nije pronađen u bazi</string>
    <string name="authenticationFailed">Neuspješna autentifikacija</string>
    <string name="noDataAvailableReservations">Nema rezervacija za prikaz</string>
    <string name="History">Povijest</string>
    <string name="typeMail">Unesite mail</string>
</resources>