<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.digitalnaribarnica.Fragments.FilterOffersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/relative_layout_podaci"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:elevation="5dp"
                    android:text="@string/fishSpecies"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/auto_complete_fish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chooseFish"
                    android:completionThreshold="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:elevation="5dp"
                    android:text="@string/location"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/auto_complete_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chooseLocation"
                    android:completionThreshold="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:elevation="5dp"
                    android:text="@string/pricePerKg"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <org.florescu.android.rangeseekbar.RangeSeekBar
                    android:id="@+id/rangeSeekBar"
                    app:textAboveThumbsColor="@color/colorBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/colorBlue"
                    app:absoluteMinValue="999"
                    app:absoluteMaxValue="0"
                    app:valuesAboveThumbs="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/range_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/range_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_999"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="25dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="3dp"
                    android:elevation="5dp"
                    android:text="@string/insertPrice"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="3dp"
                        android:elevation="5dp"
                        android:text="@string/lowPrice"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/low_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:inputType="number"
                        android:autofillHints="10.00"
                        android:textSize="18sp"
                        android:hint="@string/_0"
                        tools:ignore="LabelFor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:text="@string/kn"
                        android:textSize="14sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="3dp"
                        android:elevation="5dp"
                        android:text="@string/upperPrice"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/top_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:inputType="number"
                        android:autofillHints="10.00"
                        android:textSize="18sp"
                        android:hint="@string/_0"
                        tools:ignore="LabelFor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:text="@string/kn"
                        android:textSize="14sp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:elevation="5dp"
                    android:text="@string/fishClass"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

                <CheckBox
                    android:id="@+id/radio_small"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/small" />

                <CheckBox
                    android:id="@+id/radio_medium"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <CheckBox
                    android:id="@+id/radio_large"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />


            </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnFilter"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cv"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop = "-10dp"
            android:text="@string/search"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:backgroundTint="@color/colorBlue"
            style="@style/Widget.MaterialComponents.Button"
            tools:ignore="NotSibling"/>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>