<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background">

    <LinearLayout
        android:id="@+id/forgotPassLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="339dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forgotPasslogo"
            android:layout_width="87dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/katanac"
            android:layout_marginTop="130dp"
            />

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasslogo"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="@string/forgotPass"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/resetPassText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassText"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/resetPassTxt"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/emailinput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:hint="@string/typeMail"
            android:background="@drawable/round_edit_text"
            android:textSize="13dp"
            android:textColor="#787878"
            android:textColorHint="#8e8e8e"
            android:paddingLeft="22dp"
            />

        <Button
            android:id="@+id/btnPrijava"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/sendEmail"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
