<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerificationActivity"
    android:background="@drawable/blue_background">

    <LinearLayout
        android:id="@+id/confirmMailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="339dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/confirmMailImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/mail_confirmation_icon"
            android:layout_marginTop="130dp"
            />

        <TextView
            android:id="@+id/confirm_mail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasslogo"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="@string/mailConfirmation"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/confirm_mail_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassText"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/mailConfirmationDetails"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/btnOtvoriMailApp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="70dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/mailConfirmationButton"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"/>


        <TextView
            android:id="@+id/prijava_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:text="@string/signinhere"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>